--- a/ChooChoo-TraderModding/ChooChoo-TraderModding.csproj
+++ b/ChooChoo-TraderModding/ChooChoo-TraderModding.csproj
@@ -53,6 +53,10 @@
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\..\..\SPT-380\EscapeFromTarkov_Data\Managed\Newtonsoft.Json.dll</HintPath>
     </Reference>
+    <Reference Include="Sirenix.Serialization, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\References145\Sirenix.Serialization.dll</HintPath>
+    </Reference>
     <Reference Include="System.Core" />
     <Reference Include="UnityEngine">
       <HintPath>..\..\References145\UnityEngine.dll</HintPath>
@@ -71,9 +75,11 @@
   <ItemGroup>
     <Compile Include="Config\Config.cs" />
     <Compile Include="Config\ConfigurationManagerAttributes.cs" />
+    <Compile Include="TraderModding\DropDownPatch.cs" />
     <Compile Include="TraderModding\EditBuildScreenPatch.cs" />
     <Compile Include="Plugin\Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TraderModding\Globals.cs" />
     <Compile Include="TraderModding\TraderModdingOnlyScript.cs" />
     <Compile Include="TraderModding\TraderModdingUtils.cs" />
   </ItemGroup>
