--- a/ChooChoo-TraderModding/ChooChoo-TraderModding.csproj
+++ b/ChooChoo-TraderModding/ChooChoo-TraderModding.csproj
@@ -73,15 +73,22 @@
     <AppDesigner Include="Properties\" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Config\Config.cs" />
-    <Compile Include="Config\ConfigurationManagerAttributes.cs" />
-    <Compile Include="TraderModding\DropDownPatch.cs" />
-    <Compile Include="TraderModding\EditBuildScreenPatch.cs" />
-    <Compile Include="Plugin\Plugin.cs" />
+    <Compile Include="Client\Config\Config.cs" />
+    <Compile Include="Client\Config\ConfigurationManagerAttributes.cs" />
+    <Compile Include="Client\Patches\DropDownPatch.cs" />
+    <Compile Include="Client\Patches\EditBuildScreenPatch.cs" />
+    <Compile Include="Client\Plugin\Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TraderModding\Globals.cs" />
-    <Compile Include="TraderModding\TraderModdingOnlyScript.cs" />
-    <Compile Include="TraderModding\TraderModdingUtils.cs" />
+    <Compile Include="Client\TraderModding\Globals.cs" />
+    <Compile Include="Client\TraderModding\TraderModdingOnlyScript.cs" />
+    <Compile Include="Client\TraderModding\TraderModdingUtils.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Server\ChooChoo-TraderModding-1.2.0\config\config.json" />
+    <None Include="Server\ChooChoo-TraderModding-1.2.0\package.json" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Server\ChooChoo-TraderModding-1.2.0\src\mod.ts" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
