--- a/ChooChoo-TraderModding/ChooChoo-TraderModding.csproj
+++ b/ChooChoo-TraderModding/ChooChoo-TraderModding.csproj
@@ -78,6 +78,18 @@
     <Reference Include="UnityEngine.CoreModule">
       <HintPath>..\..\..\SPT-380\EscapeFromTarkov_Data\Managed\UnityEngine.CoreModule.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.InputLegacyModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\References145\UnityEngine.InputLegacyModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.InputModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\References145\UnityEngine.InputModule.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.TextRenderingModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\References145\UnityEngine.TextRenderingModule.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.UI, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\References145\UnityEngine.UI.dll</HintPath>
@@ -91,6 +103,7 @@
     <Compile Include="Client\Config\ConfigurationManagerAttributes.cs" />
     <Compile Include="Client\Patches\DropDownPatch.cs" />
     <Compile Include="Client\Patches\EditBuildScreenPatch.cs" />
+    <Compile Include="Client\Patches\ItemObserveScreenPatch.cs" />
     <Compile Include="Client\Plugin\Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Client\TraderModding\Globals.cs" />
