Build Cost working (Somehow I do the dollar->ruble conversion more accurate than BSG, they show overpriced items when assembling the gun)

--- a/ChooChoo-TraderModding/ChooChoo-TraderModding.csproj
+++ b/ChooChoo-TraderModding/ChooChoo-TraderModding.csproj
@@ -104,6 +104,7 @@
     <Compile Include="Client\Patches\DropDownPatch.cs" />
     <Compile Include="Client\Patches\EditBuildScreenPatch.cs" />
     <Compile Include="Client\Patches\ItemObserveScreenPatch.cs" />
+    <Compile Include="Client\Patches\WeaponUpdatePatch.cs" />
     <Compile Include="Client\Plugin\Plugin.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Client\TraderModding\Globals.cs" />
