Servermod fix for custom dollar, euro conversion rates that other mods might add. Broke everything because Json.DeserializeObject just causes a deadlock instead of throwing an exception.... Bump to 1.5.3

--- a/ChooChoo-TraderModding/ChooChoo-TraderModding.csproj
+++ b/ChooChoo-TraderModding/ChooChoo-TraderModding.csproj
@@ -120,6 +120,6 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy /y "$(TargetDir)ChooChoo-TraderModding.dll" "T:\SPT-380\BepInEx\plugins"</PostBuildEvent>
+    <PostBuildEvent>xcopy /y "$(TargetDir)ChooChoo-TraderModding.dll" "T:\SPT-380_second\BepInEx\plugins"</PostBuildEvent>
   </PropertyGroup>
 </Project>
