--- a/ChooChoo-TraderModding/ChooChoo-TraderModding.csproj
+++ b/ChooChoo-TraderModding/ChooChoo-TraderModding.csproj
@@ -94,6 +94,10 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\References145\UnityEngine.UI.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.UIModule, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\References145\UnityEngine.UIModule.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <AppDesigner Include="Properties\" />
@@ -106,6 +110,7 @@
     <Compile Include="Client\Patches\ItemObserveScreenPatch.cs" />
     <Compile Include="Client\Patches\WeaponUpdatePatch.cs" />
     <Compile Include="Client\Plugin\Plugin.cs" />
+    <Compile Include="Client\TraderModding\FieldInfos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Client\TraderModding\Globals.cs" />
     <Compile Include="Client\TraderModding\TraderModdingOnlyScript.cs" />
@@ -120,6 +125,6 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy /y "$(TargetDir)ChooChoo-TraderModding.dll" "T:\SPT-380_second\BepInEx\plugins"</PostBuildEvent>
+    <PostBuildEvent>xcopy /y "$(TargetDir)ChooChoo-TraderModding.dll" "T:\SPT-380\BepInEx\plugins"</PostBuildEvent>
   </PropertyGroup>
 </Project>
