--- a/ChooChoo-TraderModding/ChooChoo-TraderModding.csproj
+++ b/ChooChoo-TraderModding/ChooChoo-TraderModding.csproj
@@ -124,6 +124,7 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy /y "$(TargetDir)ChooChoo-TraderModding.dll" "T:\SPT-380\BepInEx\plugins"</PostBuildEvent>
+    <PostBuildEvent>xcopy /y "$(TargetDir)ChooChoo-TraderModding.dll" "T:\SPT-381\BepInEx\plugins"
+xcopy /y "$(ProjectDir)Server\ChooChoo-TraderModding-1.2.0\src\mod.ts" "T:\SPT-381\user\mods\ChooChoo-TraderModding-1.2.0\src"</PostBuildEvent>
   </PropertyGroup>
 </Project>
