--- a/ChooChoo-TraderModding_Client/ChooChoo-TraderModding_Client.csproj
+++ b/ChooChoo-TraderModding_Client/ChooChoo-TraderModding_Client.csproj
@@ -45,7 +45,7 @@
     <Compile Include="Client\TraderModding\FieldInfos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Client\TraderModding\Globals.cs" />
-    <Compile Include="Client\TraderModding\TraderModdingOnlyScript.cs" />
+    <Compile Include="Client\TraderModding\TraderModdingScript.cs" />
     <Compile Include="Client\TraderModding\TraderModdingUtils.cs" />
   </ItemGroup>
   <ItemGroup>
