--- a/ChooChoo-TraderModding_Client/ChooChoo-TraderModding_Client.csproj
+++ b/ChooChoo-TraderModding_Client/ChooChoo-TraderModding_Client.csproj
@@ -106,6 +106,7 @@
     <Reference Include="spt-singleplayer">
       <HintPath>..\..\..\BepInEx\plugins\spt\spt-singleplayer.dll</HintPath>
     </Reference>
+    <Reference Include="System" />
     <Reference Include="Unity.TextMeshPro, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\EscapeFromTarkov_Data\Managed\Unity.TextMeshPro.dll</HintPath>
