Check if flea is unlocked, sort all mods array by localized short name (In game somehow weird and swaps sort direction?!?!) update assembly version to 2.1.0

--- a/ChooChoo-TraderModding_Client/ChooChoo-TraderModding_Client.csproj
+++ b/ChooChoo-TraderModding_Client/ChooChoo-TraderModding_Client.csproj
@@ -142,6 +142,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>xcopy /y "$(TargetPath)" "$(ProjectDir)..\..\..\BepInEx\plugins"</PostBuildEvent>
+    <PostBuildEvent>xcopy /y "$(TargetPath)" "$(ProjectDir)..\..\..\BepInEx\plugins"
+
+mkdir "$(ProjectDir)..\Release\BepInEx\plugins"
+xcopy /y "$(TargetPath)" "$(ProjectDir)..\Release\BepInEx\plugins"</PostBuildEvent>
   </PropertyGroup>
 </Project>
